fix margin top and overflow-x

--- a/contacts/contact.css
+++ b/contacts/contact.css
@@ -96,7 +96,7 @@ nav {
   flex-direction: column;
   align-items: center;
   max-width: 22rem;
-  margin: 0 auto;
+  margin: 0rem auto;
   padding: 40px;
   box-sizing: border-box;
 }
@@ -228,6 +228,14 @@ nav {
   .burger {
     display: block;
     cursor: pointer;
+  }
+}
+
+/* MARGIN */
+
+@media screen and (max-height: 900px) {
+  .sub-container {
+    margin-top: 10rem;
   }
 }
 
